# SBFspot

./: .gitattributes  .gitignore  README.md  SBFspot.sln  license.md
.github/: funding.yml
SBFspot/: ArchData.cpp  ArchData.h  Bluetooth.cpp  CMakeLists.txt  CSVexport.cpp  CSVexport.h  Config.cpp  Config.h  CreateMySQLDB.sql  CreateMySQLUser.sql  CreateSQLiteDB.sql  Defines.cpp  Defines.h  Ethernet.cpp  Ethernet.h  EventData.cpp  EventData.h  Export.cpp  Export.h  Import.cpp  Import.h  Inverter.cpp  Inverter.h  MqttMsgPackExport.cpp  MqttMsgPackExport.h  Rec40Att.h  Rec40S32.h  SBFNet.cpp  SBFNet.h  SBFspot.cfg  SBFspot.cpp  SBFspot.h  SBFspot.vcxproj  SBFspot.vcxproj.filters  SQLselect.h  TagDefs.cpp  TagDefs.h  TagListDE-DE.txt  TagListEN-US.txt  TagListES-ES.txt  (+41 more)
SBFspot/tests/: BluetoothTest.cpp  CMakeLists.txt  MqttTest.cpp
SBFspotUploadCommon/: CommonServiceCode.cpp  CommonServiceCode.h  Configuration.cpp  Configuration.h  PVOutput.cpp  PVOutput.h  PVOutput_x.cpp
SBFspotUploadDaemon/: SBFspotUpload.cfg  SBFspotUpload.default.cfg  SBFspotUpload.service  SBFspotUpload.service.default  SBFspotUpload.service.mariadb  SBFspotUpload.service.mysql  main.cpp  makefile
SBFspotUploadService/: SBFspotUpload.cfg  SBFspotUpload.default.cfg  SBFspotUploadService.cpp  SBFspotUploader.vcxproj  SBFspotUploader.vcxproj.filters  ServiceBase.cpp  ServiceBase.h  ServiceInstaller.cpp  ServiceInstaller.h  ThreadPool.h  UploadService.cpp  UploadService.h
SBFspotWeatherCommon/: CommonServiceCode.cpp  CommonServiceCode.h  Configuration.cpp  Configuration.h  WeatherAPI.cpp  WeatherAPI.h  WeatherAPI_x.cpp  db_SQLite_Weather.cpp  db_SQLite_Weather.h
SBFspotWeatherDaemon/: SBFspotUpload.cfg  SBFspotUpload.default.cfg  SBFspotWeather.service  makefile
SBFspotWeatherService/: CreateSQLiteWeather.sql  SBFspotWeather.default.cfg  SBFspotWeather.sln  SBFspotWeather.vcxproj  SBFspotWeather.vcxproj.filters  SBFspotWeatherService.cpp  ServiceBase.cpp  ServiceBase.h  ServiceInstaller.cpp  ServiceInstaller.h  ThreadPool.h  WeatherService.cpp  WeatherService.h
TestWeather/: TestWeather.cpp  TestWeather.sln  TestWeather.vcxproj  TestWeather.vcxproj.filters  testapi.txt
docker/: Dockerfile  Dockerfile.arm32v6  Dockerfile.arm32v7  Dockerfile.arm64v8  README.md  docker-compose.yml  multi-arch-manifest.yml  start.sh
docker/hooks/: post_push  pre_build
